--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,78 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  max-width: 100vw;
   min-height: 100vh;
+  max-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+}
+
+.App .left-side {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-right: .5px solid grey;
+}
+
+.App .right-side {
+  border-left: .5px solid grey;
+}
+
+.App .left-side, 
+.App .right-side {
+  height: 300px;
+  width: 100%;
+}
+
+.App .left-side form {
+  height: fit-content;
+  background: white;
+  border: 1px solid grey;
+  border-radius: 4px;
+  width: 300px;
+  padding: 40px 10px;
+}
+
+.App .left-side form input {
+  margin: 0 0 30px;
+  width: 200px;
+}
+
+.App .left-side form .btn {
+  height: 40px;
+  width: 200px;
+  background: white;
+  border: 1px solid grey;
+  cursor: pointer;
+  border-radius: 4px;
+}
+
+.App .left-side form .btn:hover {
   color: white;
+  background: grey;
 }
 
-.App-link {
-  color: #61dafb;
+.App .left-side form .btn:focus {
+  box-shadow: none;
+  outline: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App .left-side form .btn.widget-btn {
+  margin-top: 15px;
+  background: #800080;
+  border: 1px solid #800080;
+  color: #FFFFFF;
+}
+
+.App .left-side form .btn.widget-btn:hover {
+  margin-top: 15px;
+  background: #4B0082;
+  border: 1px solid #4B0082;
+  color: #FFFFFF;
+}
+
+.App .right-side .displayed-image {
+  height: 300px;
+  width: 300px;
 }
